--- a/tests/OdysseyAPI.Tests.Integration/OdysseyAPI.Tests.Integration.csproj
+++ b/tests/OdysseyAPI.Tests.Integration/OdysseyAPI.Tests.Integration.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -22,8 +22,10 @@
     </PackageReference>
 
     <PackageReference Include="Testcontainers" Version="2.2.0" />
+    <PackageReference Include="FluentAssertions" Version="6.8.0" />
     <PackageReference Include="WebMotions.Fake.Authentication.JwtBearer" Version="6.1.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="7.0.0" />
+    <PackageReference Include="Bogus" Version="34.0.2" />
   </ItemGroup>
 
   <ItemGroup>
